Add tooltip to account/source connection icon
I set up an account with the details from the top of my head. I then waited for the inbox to be synced but nothing happened. I then saw a question mark on the double arrow icon with no other indication as to what went wrong. I was unable to get an error message to fix the configuration problem.
I later checked on another properly configured computer, the issue was that the IMAP address was incorrect.
Edited by Milan Crha