I#697 - Add tooltip to account/source connection icon

Closes https://gitlab.gnome.org/GNOME/evolution/-/issues/697